Added content and linked script.js for dynamic content

--- a/index.html
+++ b/index.html
@@ -3,10 +3,14 @@
     <head>
         <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+         <title>yddf website</title>
         <link rel="stylesheet" href="style.css" />  
-        <title>yddf website</title>
-        </head>
+</head>
     <body>
         <h1>Empowering Youth, Driving Change</h1>
-    </body> 
+        <body>
+            <p>welcome to my page</p>
+        <nav class="nav_container"
+        </nav>
+                </body> 
     </html>
