--- a/index.html
+++ b/index.html
@@ -1,16 +1,71 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
+<head>
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-         <title>yddf website</title>
-        <link rel="stylesheet" href="style.css" />  
+    <title>YDDF - Youth Development and Diversity Foundation</title>
+    <link rel="stylesheet" href="style.css" />  
 </head>
-    <body>
-        <h1>Empowering Youth, Driving Change</h1>
-        <body>
-            <p>welcome to my page</p>
-        <nav class="nav_container"
-        </nav>
-                </body> 
-    </html>
+<body>
+    <!-- Navigation bar -->
+    <nav>
+        <ul>
+            <li><a href="#about">About</a></li>
+            <li><a href="#programs">Programs</a></li>
+            <li><a href="#news">News</a></li>
+            <li><a href="#events">Events</a></li>
+            <li><a href="#contact">Contact</a></li>
+            <li><a href="#careers">Careers</a></li>
+            <li><a href="#partners">Partners</a></li>
+        </ul>
+    </nav>
+
+    <!-- Page content -->
+    <header>
+        <h1>Welcome to YDDF</h1>
+        <p>Your partner in promoting inclusivity and empowering youth.</p>
+    </header>
+
+    <section id="about">
+        <h2>About YDDF</h2>
+        <p>The Youth Development and Diversity Foundation (YDDF) is dedicated to championing inclusivity and empowering marginalized youth. Our mission is to create a world where every young person has the opportunity to thrive, regardless of their background or circumstances.</p>
+    </section>
+
+    <section id="programs">
+        <h2>Programs</h2>
+        <p>Our programs focus on education, mentorship, and community engagement. We provide resources and support to help young people develop essential skills, connect with mentors, and access opportunities that foster personal and professional growth.</p>
+    </section>
+
+    <section id="news">
+        <h2>News</h2>
+        <p>Stay tuned for the latest updates on our initiatives, success stories, and events that promote inclusivity within communities.</p>
+    </section>
+
+    <section id="events">
+        <h2>Events</h2>
+        <p>Join us for workshops, seminars, and community gatherings aimed at fostering inclusivity and empowering youth. Check our calendar for upcoming events!</p>
+    </section>
+
+    <section id="contact">
+        <h2>Contact Us</h2>
+        <p>If you have any questions or would like to get involved, feel free to reach out via email at <a href="mailto:info@yddf.org">info@yddf.org</a>.</p>
+    </section>
+
+    <section id="careers">
+        <h2>Careers</h2>
+        <p>We are always looking for passionate individuals to join our team. Explore our job opportunities and help us make a difference in the lives of young people.</p>
+    </section>
+
+    <section id="partners">
+        <h2>Partners</h2>
+        <p>We collaborate with various organizations and stakeholders to amplify our impact. Together, we can create a more inclusive world for youth.</p>
+    </section>
+
+    <section id="dynamic-content">
+        <!-- JavaScript will dynamically add content here -->
+    </section>
+
+    <!-- Link to JavaScript file -->
+    <script src="script.js"></script>
+</body>
+</html>
