Updated index.html with YDDF information and navigation

--- a/index.html
+++ b/index.html
@@ -7,21 +7,18 @@
     <link rel="stylesheet" href="style.css" />  
 </head>
 <body>
-    <!-- Navigation bar -->
-    <nav>
+    <div>
         <ul>
-            <li><a href="#about">About</a></li>
-            <li><a href="#programs">Programs</a></li>
-            <li><a href="#news">News</a></li>
-            <li><a href="#events">Events</a></li>
-            <li><a href="#contact">Contact</a></li>
-            <li><a href="#careers">Careers</a></li>
-            <li><a href="#partners">Partners</a></li>
+        <li>about yddf</li>
+        <li>programs</li>
+        <li>news</li>
+        <li>event</li>
+        <li>contact us</li>
+        <li>careers</li>
+        <li>partners</li>
         </ul>
-    </nav>
-
-    <!-- Page content -->
-    <header>
+    </div>
+       <header>
         <h1>Welcome to YDDF</h1>
         <p>Your partner in promoting inclusivity and empowering youth.</p>
     </header>
@@ -62,10 +59,7 @@
     </section>
 
     <section id="dynamic-content">
-        <!-- JavaScript will dynamically add content here -->
     </section>
-
-    <!-- Link to JavaScript file -->
     <script src="script.js"></script>
 </body>
 </html>
