Updated index.html with YDDF information and navigation

--- a/index.html
+++ b/index.html
@@ -6,7 +6,18 @@
     <title>YDDF - Youth Development and Diversity Foundation</title>
     <link rel="stylesheet" href="style.css" />  
 </head>
+<main>
+    
 <body>
+    <header>
+        <nav>
+            <ul>
+                <Li>about yddf</Li>
+                <li>home</li>
+                <li>contact us</li>
+            </ul>
+        </nav>
+    </header>
     <div>
         <ul>
         <li>about yddf</li>
@@ -19,47 +30,9 @@
         </ul>
     </div>
        <header>
-        <h1>Welcome to YDDF</h1>
-        <p>Your partner in promoting inclusivity and empowering youth.</p>
-    </header>
-
-    <section id="about">
-        <h2>About YDDF</h2>
-        <p>The Youth Development and Diversity Foundation (YDDF) is dedicated to championing inclusivity and empowering marginalized youth. Our mission is to create a world where every young person has the opportunity to thrive, regardless of their background or circumstances.</p>
-    </section>
-
-    <section id="programs">
-        <h2>Programs</h2>
-        <p>Our programs focus on education, mentorship, and community engagement. We provide resources and support to help young people develop essential skills, connect with mentors, and access opportunities that foster personal and professional growth.</p>
-    </section>
-
-    <section id="news">
-        <h2>News</h2>
-        <p>Stay tuned for the latest updates on our initiatives, success stories, and events that promote inclusivity within communities.</p>
-    </section>
-
-    <section id="events">
-        <h2>Events</h2>
-        <p>Join us for workshops, seminars, and community gatherings aimed at fostering inclusivity and empowering youth. Check our calendar for upcoming events!</p>
-    </section>
-
-    <section id="contact">
-        <h2>Contact Us</h2>
-        <p>If you have any questions or would like to get involved, feel free to reach out via email at <a href="mailto:info@yddf.org">info@yddf.org</a>.</p>
-    </section>
-
-    <section id="careers">
-        <h2>Careers</h2>
-        <p>We are always looking for passionate individuals to join our team. Explore our job opportunities and help us make a difference in the lives of young people.</p>
-    </section>
-
-    <section id="partners">
-        <h2>Partners</h2>
-        <p>We collaborate with various organizations and stakeholders to amplify our impact. Together, we can create a more inclusive world for youth.</p>
-    </section>
-
-    <section id="dynamic-content">
-    </section>
-    <script src="script.js"></script>
+</main>
+<footer>
+    <p>We are located in Nyamira County</p>
+</footer>
 </body>
 </html>
